# xmc4500-rust

./: .gitignore  Cargo.toml  GDBCommands  JLinkCommands  README.md  debug.sh  memory.x  run.sh
.cargo/: config.toml
src/: main.rs
