[package]
authors = ["SirWalross <27106448+SirWalross@users.noreply.github.com>"]
edition = "2018"
readme = "README.md"
name = "rust"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7.7" }
cortex-m-rt = "0.7.0"
cortex-m-semihosting = "0.5.0"
critical-section = "1.1.2"
panic-halt = "0.2.0"
xmc4500 = { version = "0.7.0", features = ["rt", "cortex-m-rt"] }

[[bin]]
name = "rust"
test = false
bench = false

[profile.release]
codegen-units = 1
debug = true
lto = true
